toolchain/internal/core/analysis/testdata/errors/spreads/conflict_in_inline_spread.vdl
// @expect: E203

type BasePayload {
  value string
}

type Envelope {
  payload {
    ...BasePayload
    value int
  }
}
